<resources>
    <string name="app_name">BARBERSHOP</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- auth strings -->
    <string name="email">Email</string>
    <string name="name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="is_barber">Are you a barber ?</string>
    <string name="terms_and_conditions">By signing up, I agree with the Terms of Service  and Privacy Policy</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="incorrect_credentials">Email or username are incorrect</string>
    <!-- validation messages -->
    <string name="name_error">Enter a valid name</string>
    <string name="email_error">Enter a valid email</string>
    <string name="phone_error">Enter a valid phone number</string>
    <string name="password_error">Enter a valid password</string>
    <string name="confirm_password_error">Passwords must be the same</string>


    <!-- Barber Activity Strings -->
    <string name="info_tab">INFO</string>
    <string name="reviews_tab">REVIEWS</string>
    <string name="services_tab">SERVICES</string>
    <string name="location">LOCATION</string>
    <string name="hours">HOURS</string>
    <string name="edit">EDIT</string>
    <string name="address">Address</string>
    <string name="photos">PHOTOS</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="reviews">REVIEWS</string>
    <string name="services">SERVICES</string>
    <string name="add">ADD</string>

    <!-- Location strings -->
    <string name="barbershop_name">BARBERSHOP NAME</string>
    <string name="street">STREET</string>
    <string name="building">BUILDING, FLOOR, SUITE, ETC.</string>
    <string name="city">CITY</string>
    <string name="country">COUNTRY</string>


    <!-- Notifications strings -->
    <string name="notifications">NOTIFICATIONS</string>


    <!-- Appointments strings -->
    <string name="appointments">APPOINTMENTS</string>
    <string name="requested">Requested</string>
    <string name="cancelled">Cancelled</string>
    <string name="confirmed">Confirmed</string>
    <string name="completed">Completed</string>
    <string name="no_show">No show</string>

    <!-- Clients -->
    <string name="clients">CLIENTS</string>
    <string name="book">Book</string>

</resources>
