<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AuthTheme"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ui.SignupFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:hint="@string/name"
        android:textColor="@android:color/white"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:hint="@string/email"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPhone"
        android:hint="@string/phone"
        android:textColor="@android:color/white"
        android:inputType="phone"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etConfirmPassword"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_barber"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NO"
            android:textSize="12sp"
            android:layout_marginLeft="40dp"/>

        <Switch
            android:id="@+id/isBarber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="YES"
            android:textSize="12sp"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignup"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/signup"
        android:padding="10dp"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/colorAccent"
        android:autoLink="web"/>

</LinearLayout>